# agentontology

./: .gitignore  README.md  fetch_ontology_from_input.py  main.py  modal.py  pyproject.toml
agents/: __init__.py  choose_tool_fromlist.py  map_biotool_ontology_to_io.py  query_ontology_db.py
tools/: __init__.py  bio_tools_tools.py  fetch_ontology_tools.py  meta_yml_tools.py
