[project]
name = "agent-ontology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.6.1",
    "gradio[mcp]>=5.0.0",
    "huggingface_hub[mcp]>=0.32.2",
    "mcp>=1.9.2",
    "requests",
    "smolagents[litellm,mcp]>=1.17.0",
    "textblob>=0.19.0",
]
